@@ -1,6 +1,10 @@
 Revision history for Plack-Middleware-Statsd
 
 {{$NEXT}}
+  [Documentation]
+  - Updated information on logging content types.
+
+  - Added missing psgi.request.content-type metric.
 
 v0.1.1    2018-02-01 14:21:29+00:00 Europe/London
   [Bug Fixes]
